--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -1,18 +1,20 @@
 <div id='content'>
     <h2> Forms </h2>
     <div class="ui grid">
-    {{#each model as |form|}}   
-        <div class="eight wide column">
+     {{#each model.form as |form|}}   
+        <div class="four wide column">
         <label>{{form.name}}</label>
         </div>
-        <div class="four wide column right aligned">
-        {{manage-form ID=form.id}}
+        <div class="eight wide column right aligned">
+       {{manage-form ID=form.id}}
         </div>
         <div class="four wide column left aligned">
         {{delete-form ID=form.id}}
         </div>
-    {{/each}}
+     {{/each}}
     </div>
+    
+    <br><br><br>
 </div>
 
 {{add-form}}
