--- a/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
@@ -9,6 +9,8 @@
         <a class="ui primary basic button">{{#link-to 'questions'}}Modify Question{{/link-to}}</a>
         <br><br>
         <a class = "ui primary basic button">{{#link-to 'forms'}}Manage Form{{/link-to}}</a>
+        <br><br>
+        <a class = "ui primary basic button">{{#link-to 'assesmentforms'}}Manage Assesment Tests{{/link-to}}</a>
     </tbody>
   {{/ui-accordion}}
 
