--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
@@ -21,7 +21,7 @@
 
         <div class="field">
             <label>Author Name</label>
-            {{textarea type="text" value=AuthName placeholder="Author Name"}}
+            {{input type="text" value=AuthName placeholder="Author Name"}}
         </div>
 
       <div class="field">
@@ -77,6 +77,10 @@
             {{input type ="text" value=MMURL placeholder="Multi Media URL"}}
         </div>
 
+        <div class = "field">
+            {{simple-example}}
+            <br><br>
+        </div>
 
     <!--footer for save / cancel-->
     <div class="actions">
