--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -1,4 +1,4 @@
-<div id='content'>
+{{!-- {{ui-accordian}}
     <h2> Forms </h2>
     <div class="ui grid">
      {{#each model.form as |form|}}   
@@ -15,8 +15,34 @@
     </div>
     
     <br><br><br>
-</div>
+
+
+{{add-form}} --}}
+
+<br>
+<h2> Forms </h2>
+
+{{#ui-accordion }}
+  {{#each model.form as |form|}}
+    <div class="ui grid">
+      <div class="six wide column">
+        <div class="title">
+          <i class="dropdown blue icon"></i>
+          {{form.name}}
+        </div>
+      </div>
+      <div class="six wide column right aligned">
+          {{manage-form ID=form.id questions=form.questions}}
+        </div>
+      <div class="two wide column right aligned">
+        {{edit-form ID=form.id}}
+      </div>
+      <div class="two wide column left aligned">
+        {{delete-form ID=form.id}}
+      </div>
+    </div>
+  {{/each}}
+{{/ui-accordion}}
+
 
 {{add-form}}
-
-<br><br><br>
