Form questions show up under their respective forms

--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -30,6 +30,7 @@
           <i class="dropdown blue icon"></i>
           {{form.name}}
         </div>
+        {{show-form-questions questions=form.questions}}
       </div>
       <div class="six wide column right aligned">
           {{manage-form ID=form.id questions=form.questions}}
