Formatting + form name appears in manage form

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/manage-form.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/manage-form.hbs
@@ -6,7 +6,7 @@ Manage Form
 {{#ui-modal name= modalName class= modalName}}
         <div class='content'>
           <div class='ui form'>
-           <h2> Question List </h2>
+           <h2> {{fName}} </h2>
            <div class="ui grid">
                 {{#each questionsModel as |question|}}   
                         <div class="four wide column">
