Put add question functionality inside manage questions

--- a/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/admin.hbs
@@ -1,14 +1,11 @@
 <div id="content">
-  {{add-question}}
-  
-
   <br><br>
 
   {{#ui-accordion}}
     <tbody>
-        <a class="ui primary basic button">{{#link-to 'questions'}}Modify Question{{/link-to}}</a>
+        <a class="ui primary basic button">{{#link-to 'questions'}}Manage Questions{{/link-to}}</a>
         <br><br>
-        <a class = "ui primary basic button">{{#link-to 'forms'}}Manage Form{{/link-to}}</a>
+        <a class = "ui primary basic button">{{#link-to 'forms'}}Manage Forms{{/link-to}}</a>
     </tbody>
   {{/ui-accordion}}
 
