--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-question.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-question.hbs
@@ -115,7 +115,9 @@
   </div>
 
 {{else}}
+<div class = "ui centered grid">
     <button class="ui button" {{action 'addQuestion'}}>
         Add Question
     </button>
+    </div>
 {{/if}}
