--- a/SelfStart/SelfStartFrontEnd/app/templates/questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/questions.hbs
@@ -1,5 +1,7 @@
 <div id='content'>
-    <h2> Question List </h2>
+    <h2> Question List </h2> 
+  {{add-question}}
+<br><br><br>    
     <div class="ui grid">
         
     {{#each model as |question|}}   
@@ -21,3 +23,4 @@
     {{/each}}
     </div>
 </div>
+
