--- a/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/rehabplans.hbs
@@ -6,13 +6,17 @@
 <br>
 <br>
 <div id="content">
-  {{add-rehabplan}}
+
   <br><br>
   <div class="ui search">
-
-      <input class="prompt" type="text" placeholder="Search Rehabilitation plan">
+    <div class="ui icon input">
+      <input class="prompt" type="text" placeholder="Search rehabplans">
       <i class="search icon"></i>
+    </div>
+  </div>
 
+  <div style="float: right">
+    {{add-rehabplan}}
   </div>
 
   <br><br>
