fixing ui stuff

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-patient.hbs
@@ -1,6 +1,5 @@
 <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/form-style.css"> <!-- Resource style -->
 
-
 <form class="cd-form floating-labels" {{action "save" on="submit"}}>
   <br><br>
   <fieldset>
@@ -108,57 +107,18 @@
     </div>
   </fieldset>
 
-
-
-
   <fieldset>
 
-
-    <!--<div>-->
-      <!--<h4>Project type</h4>-->
-
-      <!--<ul class="cd-form-list">-->
-        <!--<li>-->
-          <!--<input type="radio" name="radio-button" id="cd-radio-1" checked>-->
-          <!--<label for="cd-radio-1">Choice 1</label>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<input type="radio" name="radio-button" id="cd-radio-2">-->
-          <!--<label for="cd-radio-2">Choice 2</label>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<input type="radio" name="radio-button" id="cd-radio-3">-->
-          <!--<label for="cd-radio-3">Choice 3</label>-->
-        <!--</li>-->
-      <!--</ul>-->
-    <!--</div>-->
-
-    <!--<div>-->
-      <!--<h4>Features</h4>-->
-
-      <!--<ul class="cd-form-list">-->
-        <!--<li>-->
-          <!--<input type="checkbox" id="cd-checkbox-1">-->
-          <!--<label for="cd-checkbox-1">Option 1</label>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<input type="checkbox" id="cd-checkbox-2">-->
-          <!--<label for="cd-checkbox-2">Option 2</label>-->
-        <!--</li>-->
-
-        <!--<li>-->
-          <!--<input type="checkbox" id="cd-checkbox-3">-->
-          <!--<label for="cd-checkbox-3">Option 3</label>-->
-        <!--</li>-->
-      <!--</ul>-->
-    <!--</div>-->
-
     <div>
-      <input type="submit" value="Submit">
+
+
+      <div class="cd-button">
+        <input type="submit" value="Submit">
+      </div>
+
     </div>
+
+
+
   </fieldset>
 </form>
-
