--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-rehabplan.hbs
@@ -1,10 +1,9 @@
-<button class = "ui mini circular icon green button" {{action 'openModal'}} title="Edit">
-  <i class=" pencil icon"> </i>
+<button class="ui mini circular labeled icon green button" {{action 'openModal'}}title="Edit">
+    <i class="edit icon"></i>
+  Edit
 </button>
 
 {{#ui-modal name=modalName class=modalName}}
-
-
 
     <h2 id="rehabPlan" class="ui fluid centered header">Edit Rehabilitation Plan  {{planName}}</h2>
 
