--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -7,6 +7,9 @@
     <ul class="cd-bouncy-nav">
       <li><a id="patient">{{#link-to 'patients'}}Patient Info{{/link-to}}</a></li>
       <li><a id="country">{{#link-to 'manage-selections'}}Configure form{{/link-to}}</a></li>
+      <li><a id="plan">{{#link-to 'rehabplans'}}Rehabilitation Plans{{/link-to}}</a></li>
+      <li><a id="questions">{{#link-to 'questions'}}Questions{{/link-to}}</a></li>
+      <li><a id="forms">{{#link-to 'forms'}}Forms{{/link-to}}</a></li>
       <!--<li><a href="#0">Category 1</a></li>-->
       <!--<li><a href="#0">Category 2</a></li>-->
       <!--<li><a href="#0">Category 3</a></li>-->
