--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-rehabplan.hbs
@@ -1,24 +1,20 @@
-<button class = "ui mini circular icon red button" {{action 'openModal'}} title="Delete">
-  <i class=" remove icon"> </i>
+<button class="ui mini circular labeled icon red button" {{action 'openModal'}}title="Delete">
+  <i class="remove icon"></i>
+  Delete
 </button>
 
-{{#ui-modal name=modalName class=modalName}}
+{{#ui-modal name= modalName class=modalName }}
   <div class="ui icon header">
-    <i class=" warning sign icon"></i>
-    please confirm
+    Please Confirm ...
   </div>
   <div class="content">
-    <p>Are you sure you want to delete this post?</p>
+    <p>Are you sure you need to delete this element?</p>
   </div>
   <br>
-  <div class="actions">
-    <div class="ui red cancel inverted button">
-      <i class = "remove icon"></i>
-      No
-    </div>
-    <div class="ui green ok inverted button">
-      <i class="checkmark icon"></i>
-      Yes
-    </div>
+
+  <div class="actions" style="padding:0">
+    <div class="ok " style="float:left; width: 50%; cursor: pointer; background: #fc7169; color:white; text-align: center;">Yes</div>
+    <div class="cancel " style="float:left; width: 50%;  cursor: pointer; background: #b6bece; color:white; text-align: center;">No</div>
+
   </div>
 {{/ui-modal}}
