--- a/SelfStart/SelfStartFrontEnd/app/templates/questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/questions.hbs
@@ -1,22 +1,55 @@
-<div id='content'>
-    <h2> Question List </h2>
-    <div class="ui grid">
-    {{#each model as |question|}}   
-        <div class="four wide column">
-        <label>{{question.questionText}}</label>
-        </div>
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700' rel='stylesheet' type='text/css'>
 
-        <div class="four wide column">
-        <label>{{question.type}}</label>
-        </div>
+<link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/table-style.css"> <!-- Resource style -->
 
-        <div class="four wide column right aligned">
-        {{modify-question ID=question.id}}
-        </div>
-        
-        <div class="four wide column left aligned">
-        {{delete-question ID=question.id}}
-        </div>
-    {{/each}}
+<br><br><br><br><br><br><br>
+
+<p style="margin-left: 10%">{{add-question}}</p>
+
+<section id="cd-section">
+
+  <section id="cd-table">
+    <div class="cd-table-container">
+      <ul>
+        <li style="  text-align: center; font-size: 1.2rem; text-transform: uppercase;
+                          font-weight: bold; color: white; background-color: #f58b4c;">Questions</li>
+        {{#each model as |question|}}
+
+          <li>{{question.questionText}}
+            <p style="float: right; padding-top: .5%;">{{delete-question ID=question.id}}</p>
+            <p style="float: right; padding-right: 2%;  padding-top: .5%;">{{modify-question ID=question.id}}</p>
+            <p style="float: right; padding-right: 20%; ">{{question.type}}</p>
+          </li>
+
+        {{/each}}
+      </ul>
     </div>
-</div>
+
+  </section> <!-- cd-table -->
+
+</section>
+
+{{!--
+<!--<div id='content'>-->
+    <!--<h2> Question List </h2>-->
+    <!--<div class="ui grid">-->
+    <!--{{#each model as |question|}}-->
+        <!--<div class="four wide column">-->
+        <!--<label>{{question.questionText}}</label>-->
+        <!--</div>-->
+
+        <!--<div class="four wide column">-->
+        <!--<label>{{question.type}}</label>-->
+        <!--</div>-->
+
+        <!--<div class="four wide column right aligned">-->
+        <!--{{modify-question ID=question.id}}-->
+        <!--</div>-->
+
+        <!--<div class="four wide column left aligned">-->
+        <!--{{delete-question ID=question.id}}-->
+        <!--</div>-->
+    <!--{{/each}}-->
+    <!--</div>-->
+<!--</div>-->
+--}}
