--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-rehabplan.hbs
@@ -64,7 +64,7 @@
         <i id="icon" class="black large comment icon"></i>
       </div>
       <div class="fourteen wide field">
-        {{input type="text" value = exercises placeholder="Exercise"}}
+       {{view-exercise}}
       </div>
     </div>
 
