--- a/SelfStart/SelfStartFrontEnd/app/templates/components/show-form-questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/show-form-questions.hbs
@@ -2,12 +2,12 @@
   <h3>Questions: </h3>
   {{#each questions as |oneQuestion|}}
     <div class="ui grid">
-      <div class="fourteen wide column">
-        <li>  {{oneQuestion.helpDescription}}</li>
+      <div class="thirteen wide column">
+        <li>{{oneQuestion.questionText}}</li>
       </div>
       {{!-- <div class="two wide column right aligned">
-        <button class="ui mini circular icon basic red button" {{action 'deleteComment' oneComment.id}}
-                title="Delete"><i class="remove icon"></i>
+        <button class="ui mini circular icon basic red button" {{action 'openModal' oneQuestion.id}}
+                title="Remove"><i class="remove icon"></i>
         </button>
       </div> --}}
     </div>
