Fixed Form Issue

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
@@ -88,17 +88,26 @@
 
     <div class="field">
         <label>Frequency</label>
-        {{input type ="text" value=Frequency placeholder="Frequency"}}
+        <div class="ui left icon action input">
+            <i class="hourglass half icon"></i>
+            {{input type ="text" value=Frequency placeholder="Frequency"}}
+        </div>
     </div>
 
     <div class="field">
         <label>Duration</label>
-        {{input type ="text" value=Duration placeholder="Duration"}}
+        <div class="ui left icon action input">
+            <i class="calendar icon"></i>
+            {{input type ="text" value=Duration placeholder="Duration"}}
+        </div>
     </div>
 
     <div class="field">
         <label>Target Date</label>
-        {{input type ="text" value=TargetDate placeholder="Target Date"}}
+        <div class="ui left icon action input">
+            <i class="add to calendar icon"></i>
+            {{input type ="text" value=TargetDate placeholder="Target Date"}}
+        </div>
     </div>
 
     <div class="field">
