--- a/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/admin-nav.hbs
@@ -10,6 +10,7 @@
       <li><a id="plan">{{#link-to 'rehabplans'}}Rehabilitation Plans{{/link-to}}</a></li>
       <li><a id="questions">{{#link-to 'questions'}}Questions{{/link-to}}</a></li>
       <li><a id="forms">{{#link-to 'forms'}}Forms{{/link-to}}</a></li>
+      <li><a id="exercise">{{#link-to 'exercise'}}Exercises{{/link-to}}</a></li>
       <!--<li><a href="#0">Category 1</a></li>-->
       <!--<li><a href="#0">Category 2</a></li>-->
       <!--<li><a href="#0">Category 3</a></li>-->
