--- a/SelfStart/SelfStartFrontEnd/public/assets/css/nav-style.css
+++ b/SelfStart/SelfStartFrontEnd/public/assets/css/nav-style.css
@@ -287,6 +287,29 @@ header h1 {
   background-position: center;
 }
 
+.cd-bouncy-nav #exercise a::before {
+  /* icons */
+  margin-top: 0;
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: auto;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  background-color: #77BFA3;
+  background-image: url('/assets/images/nav/flash-21.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .no-touch .cd-bouncy-nav a:hover::before {
   background-color: #DC965A;
 }
